<resources>
    <string name="app_name" translatable="false">Story</string>
    <string name="transition_iv_detail_photo" translatable="false">iv_detail_photo</string>
    <string name="transition_tv_detail_name" translatable="false">tv_detail_name</string>

    <string name="hello_coders">Hello Coders</string>

    <string name="desc_add_story">Add Story</string>
    <string name="desc_photo_story">Photo Story</string>
    <string name="retry">Retry</string>
    <string name="unknown">Unknown Error</string>
    <string name="add_story">Add Story</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="stories">Stories</string>
    <string name="registering">Registering..</string>
    <string name="logging_in">Logging in..</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="password_validation">Password must be longer than 6 characters</string>
    <string name="maps">Maps</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="language">Language</string>
    <string name="normal" translatable="false">Normal</string>
    <string name="satellite" translatable="false">Satellite</string>
    <string name="terrain" translatable="false">Terrain</string>
    <string name="hybrid" translatable="false">Hybrid</string>
    <string name="your_current_location">Your current location</string>

</resources>