<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.register.RegisterFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            android:fontFamily="@font/ubuntu"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/base_purple"
            android:textSize="24sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_rounded_field_white_8"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.man.story.core.customview.EmailEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_field_white_8"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <com.man.story.core.customview.PasswordEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rounded_field_white_8"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="100"
            android:maxLines="1"
            android:padding="12dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            style="@style/ButtonStyle"
            android:paddingVertical="12dp"
            android:text="@string/submit"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</FrameLayout>