<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/mading_4"
        android:layout_marginStart="@dimen/mading_4"
        android:layout_marginEnd="@dimen/mading_16"
        app:cardBackgroundColor="#f0f0f0"
        app:cardCornerRadius="@dimen/mading_6"
        app:cardElevation="@dimen/mading_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="@dimen/mading_160"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_normal_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="1sp"
                    android:paddingVertical="@dimen/mading_12"
                    android:text="@string/normal"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mading_1"
                    android:background="#e0e0e0" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_satellite_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="1sp"
                    android:paddingVertical="@dimen/mading_12"
                    android:text="@string/satellite"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mading_1"
                    android:background="#e0e0e0" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_terrain_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="1sp"
                    android:paddingVertical="@dimen/mading_12"
                    android:text="@string/terrain"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mading_1"
                    android:background="#e0e0e0" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_hybrid_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="1sp"
                    android:paddingVertical="@dimen/mading_12"
                    android:text="@string/hybrid"
                    android:textColor="#000000"
                    android:textSize="12sp"
                    android:textStyle="normal" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/mading_1"
                    android:background="#e0e0e0" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>